# toc_project

./: .envrc  .flake8  .gitignore  flake.nix  pyproject.toml  shell.nix
.github/: CODEOWNERS
nix/: sources.json
notebooks/: notebook.ipynb  temp.py
scripts/: plot.py
tex/: .gitignore  report.bib  report.tex  sample-sigplan.tex
tex/assets/: avg_full_cells.tex
traffic_sim/: __init__.py  __main__.py  analysis.py  console.py  core.py  matrix.py  sim.py
traffic_sim/core/: __init__.py  distance.py  flow.py  matrix.py  rand.py
traffic_sim/core/analysis/: __init__.py  experiment.py
traffic_sim/core/flow/: __init__.py  base.py  flow.py
traffic_sim/core/matrix/: __init__.py  base.py  directed.py  traffic.py  weighted.py
traffic_sim/core/sim/: __init__.py  display.py  history.py  sim.py
